--- a/Notes/templates/Submit_notes.html
+++ b/Notes/templates/Submit_notes.html
@@ -8,12 +8,12 @@
 
     <div class="mb-3">
       <label style="font-weight: 700;" for="exampleInputEmail1" class="form-label">Name</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="student_name">
+      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="student_name" required>
     </div>
 
     <div class="mb-3">
       <label style="font-weight: 700;" for="idInput" class="form-label">College Id</label>
-      <input type="number" class="form-control" id="idInput" name="student_id">
+      <input type="number" class="form-control" id="idInput" name="student_id" required>
     </div>
 
     <div class="dropdown show my-4">
@@ -30,7 +30,7 @@
         <a class="dropdown-item" href="#" onclick="selectSemester('6')">Semester 6</a>
       </div>
 
-      <input type="hidden" name="student_sem" id="student_sem">
+      <input type="hidden" name="student_sem" id="student_sem" required>
     </div>
 
     <div class="container m-0 p-0 mb-4">
@@ -74,7 +74,7 @@
 
     <div class="mb-3">
       <p style="font-weight: 700;">Upload File</p>
-      <input class="form-control" type="file" name="note_file">
+      <input class="form-control" type="file" name="note_file" required>
     </div>
 
     <div class="d-flex justify-content-center mt-4">
