--- a/vege/templates/receipes.html
+++ b/vege/templates/receipes.html
@@ -24,6 +24,15 @@
       </form>
 
      
+      <form action="">
+        <div class="my-5 d-flex align-items-center ">
+        
+          <hr>
+            <input name = "search" type="text" class="form-control mx-3"  >
+            <button type="submit" class="btn btn-primary">Search</button>
+          
+            </div>
+      </form>
       
 
 <table class="table">
@@ -48,6 +57,7 @@
         <img src=" /media/{{receipe.receipe_image}} " alt=""  style="height : 200px"></td>
         <td>
           <a href="/delete-recepie/{{receipe.id}}/" class="btn btn-danger">Delete</a>
+          <a href="/update-recepie/{{receipe.id}}/" class="btn btn-success">Update</a>
         </td>
     </tr>
     {%endfor%}
