--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -16,6 +16,19 @@
 </head>
 <body>
 
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand">Navbar</a>
+          <form class="d-flex" role="search">
+            {%if request.user.is_authenticated%}
+           <a href="/logout/" class="btn btn-danger" type="submit">Logout</a>
+            {%else%}
+            <a href="/login/" class="btn btn-success" type="submit">Login</a>
+            {%endif%}
+          </form>
+        </div>
+      </nav>
+
     {% block start %}
     {% endblock %}
 
